# scp-gpt

./: .gitignore  conf.py  index.rst  pyproject.toml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
notebooks/: get_urls.ipynb
scp_gpt/models/: scp_models.py
scp_gpt/scraper/: downloader.py
tests/: test_scp_gpt.py
tests/test_models/: conftest.py  test_scp_models.py
