[tool.poetry]
name = "scp-gpt"
version = "0.1.0"
description = ""
authors = ["Matthew Billman <mgbvox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.9.2"
beautifulsoup4 = "^4.9.3"
aiohttp = "^3.7.4"
pydantic = "^1.8.2"
tqdm = "^4.62.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.1"
black = "^21.7b0"
flake8 = "^3.9.2"
Sphinx = "^4.1.2"
mypy = "^0.910"
coverage = "^5.5"
pytest-cov = "^2.12.1"
jupyter = "^1.0.0"
jupyterlab = "^3.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
